--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npx ts-node src/server.ts",
+    "build": "tsc",
     "dev": "npx nodemon src/server.ts"
   },
   "keywords": [],
@@ -22,6 +23,7 @@
     "@types/express": "^4.17.21",
     "express": "^4.19.2",
     "ts-node": "^10.9.2",
+    "tsc": "^2.0.4",
     "webhooktest": "file:"
   }
 }
